--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,7 +1,7 @@
-FROM ros:melodic
+FROM ubuntu:18.04
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt update && apt install -y \
-  python-pip \
+  sudo \
   python3-pip \
   openssh-server \
   ssh \
@@ -10,13 +10,14 @@ RUN apt update && apt install -y \
   screen \
   vim \
   htop \
+  wget \
   nmap \
   net-tools \
   iputils-ping \
   && rm -rf /var/cache/*
 RUN sed -i "s/^.*X11UseLocalhost.*$/X11UseLocalhost no/" /etc/ssh/sshd_config \
-    && useradd -ms /bin/bash -g sudo wzli && sed -i '$d' /etc/shadow \
+    && useradd -ms /bin/bash -G sudo,dialout wzli && sed -i '$d' /etc/shadow \
     && echo 'wzli:$6$bOzWPNAvGSFfk2ld$d4D8m/lUWwME.xznHYSPCVvJmSQM6Ari/nFwjl9qhGm4H9mdr.rEnAFp0Z8TzUIBLgNjkDtxDA33QZJksAkUT/:18197:0:99999:7:::' >> /etc/shadow
 EXPOSE 22
 WORKDIR /home/wzli
-CMD service ssh restart && su wzli -c "screen -S main"
+CMD service ssh restart && sleep infinity
