--- a/ros/Dockerfile
+++ b/ros/Dockerfile
@@ -1,7 +1,6 @@
-FROM ubuntu:18.04
+FROM ros:melodic
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt update && apt install -y \
-  sudo \
   python-pip \
   python3-pip \
   openssh-server \
@@ -11,14 +10,13 @@ RUN apt update && apt install -y \
   screen \
   vim \
   htop \
-  wget \
   nmap \
   net-tools \
   iputils-ping \
   && rm -rf /var/cache/*
 RUN sed -i "s/^.*X11UseLocalhost.*$/X11UseLocalhost no/" /etc/ssh/sshd_config \
-    && useradd -ms /bin/bash -g sudo wzli && sed -i '$d' /etc/shadow \
+    && useradd -ms /bin/bash -G sudo,dialout wzli && sed -i '$d' /etc/shadow \
     && echo 'wzli:$6$bOzWPNAvGSFfk2ld$d4D8m/lUWwME.xznHYSPCVvJmSQM6Ari/nFwjl9qhGm4H9mdr.rEnAFp0Z8TzUIBLgNjkDtxDA33QZJksAkUT/:18197:0:99999:7:::' >> /etc/shadow
 EXPOSE 22
 WORKDIR /home/wzli
-CMD service ssh restart && sleep infinity
+CMD service ssh restart && sleep infinity 
