added cmake to esp_idf_v4.0

--- a/esp_idf_v4.0/Dockerfile
+++ b/esp_idf_v4.0/Dockerfile
@@ -12,6 +12,7 @@ RUN apt update && apt install -y \
   screen \
   vim \
   htop \
+  cmake \
   clang-format \
   python3-yapf \
   && rm -rf /var/cache/*
