--- a/esp_idf_v4.0/Dockerfile
+++ b/esp_idf_v4.0/Dockerfile
@@ -15,6 +15,7 @@ RUN apt update && apt install -y \
   cmake \
   clang-format \
   python3-yapf \
+  libpython2.7 \
   && rm -rf /var/cache/*
 RUN sed -i "s/^.*X11UseLocalhost.*$/X11UseLocalhost no/" /etc/ssh/sshd_config \
     && useradd -ms /bin/bash -G sudo,dialout wzli && sed -i '$d' /etc/shadow \
